cabal-version:      3.0
name:               keep-calm
version:            0.1.0.0
license:            NONE
author:             Danil Berestov
maintainer:         goosedb@yandex.ru
category:           Control
extra-source-files: CHANGELOG.md

library
    exposed-modules:  KeepCalm, KeepCalm.Internal
    build-depends:    base, containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite keep-calm-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, hspec, hspec-expectations, keep-calm
